Add missing viewport header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nikola Tesla Tribute</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -106,6 +108,5 @@
         <p>Written and Coded with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="mailto:rruimor459@gmail.com">Rafael Ruiz Moreno</a></p>
       </footer>
     </div>
-
   </body>
 </html>
