Add font awesome support and fix typos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="index.css" />
+    <script src="https://use.fontawesome.com/e5f119e34c.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   </head>
@@ -57,7 +58,7 @@
               <strong>1884</strong> - Moved to United States, immediately approaching Thomas Edison with a letter of introduction.
             </li>
             <li>
-              <strong>1885</strong> - Quit working for Edison, with the intention of starting hos own electrical company.
+              <strong>1885</strong> - Quit working for Edison, with the intention of starting his own electrical company.
             </li>
             <li>
               <strong>1886</strong> - Began Tesla Electric Light and Manufacturing.
