--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nikola Tesla Tribute</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" media="screen" href="index.css" />
+    <link rel="stylesheet" media="screen" href="style.css" />
     <script src="https://use.fontawesome.com/e5f119e34c.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
